[gd_scene load_steps=5 format=2]

[ext_resource path="res://cards/avatar/Likedino.png" type="Texture" id=1]
[ext_resource path="res://mocraClassic/notifications/detailed_notifications/preset.tscn" type="PackedScene" id=2]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=3]
[ext_resource path="res://mocraClassic/notifications/cards/detailed_preset.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1020.0
margin_bottom = -830.0
rect_min_size = Vector2( 900, 250 )
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 125.0 ],
"_edit_vertical_guides_": [ 450.0 ]
}

[node name="Control" parent="." instance=ExtResource( 2 )]

[node name="cardIcon" type="TextureRect" parent="Control"]
margin_left = 34.0
margin_top = 27.0
margin_right = 234.0
margin_bottom = 227.0
texture = ExtResource( 1 )

[node name="titleLabel" type="Label" parent="Control"]
margin_left = 276.0
margin_right = 612.0
margin_bottom = 85.0
text = "Card sold"

[node name="numberLabel" type="Label" parent="Control"]
margin_left = 393.0
margin_top = 85.0
margin_right = 504.0
margin_bottom = 170.0
grow_horizontal = 2
text = "NA"

[node name="amountLabel" type="Label" parent="Control"]
margin_left = 409.0
margin_top = 166.0
margin_right = 495.0
margin_bottom = 251.0
grow_horizontal = 2
text = "20"

[node name="deleteButton" type="Button" parent="Control"]
margin_left = 764.0
margin_top = 81.0
margin_right = 860.0
margin_bottom = 166.0
theme_type_variation = "button_red"
text = "X"

[connection signal="pressed" from="Control/deleteButton" to="." method="_on_deleteButton_pressed"]
